hphp/hack/test/typecheck/array_foreach.php.exp
File "array_foreach.php", line 20, characters 8-11:
Invalid argument (Typing[4110])
  File "array_foreach.php", line 30, characters 15-33:
  Expected `darray<int, string>`
  File "array_foreach.php", line 12, characters 15-28:
  But got `varray<string>`
